--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   http: ^1.2.2
+  flutter_animate: ^4.5.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
